dnl Process this file with autoconf to produce a configure script.
AC_INIT(jess.c)
AM_INIT_AUTOMAKE(JESS, 2.9.1)
AM_DISABLE_STATIC

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AM_PROG_LIBTOOL

AM_PATH_GLIB(1.2.0, , AC_MSG_ERROR([*** GLIB >= 1.2.0 not installed - please install first ***]))
AM_PATH_XMMS(1.0.1, , AC_MSG_ERROR([*** XMMS >= 1.0.1 not installed - please install first ***]))
AM_PATH_SDL(1.1.5, , AC_MSG_ERROR([*** SDL >= 1.1.5 not installed - please install first ***]))

dnl Checks for libraries.
dnl AC_HEADER_STDC

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
